fix:improve scrolling in the viewer sidebar, specially on mobile devices.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -126,7 +126,7 @@ body:after {
   max-height: calc(var(--vh, 1vh) * 100);
   max-width: 250px;
   min-width: 250px;
-  overflow: hidden;
+  overflow-y: auto;
   padding: 8px;
   position: absolute;
   transform: scale(0, 1);
